--- a/index.html
+++ b/index.html
@@ -11,3 +11,9 @@
     <h1>Alurabook</h1>
 </body>
 </html>
+<body>
+    <header class=”cabeçalho”>
+    <span class=”cabeçalho__menu-hamburguer”></span>
+    <img src=”img/Logo.svg” alt=”Logo da Alurabooks”>
+    </header>
+    </body>
