--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraBooks</title>
+    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Alurabook</h1>
+    
+    <header class= "cabeçalho"></header>
+    <span class="cabeçalho__menu-hamburguer"></span>
+    <img src="img/Logo.svg" alt=”Logo da Alurabooks”>
+
+    <a href=”#”><img src=”img/Favoritos.svg” alt=”Meus favoritos”></a>
+    <a href=”#”><img src=”img/Compras.svg” alt=”Carrinho de compras”></a>
+    <a href=”#”><img src=”img/Usuario.svg” alt=”Meu perfil”></a>
+    </header>
 </body>
 </html>
-<body>
-    <header class=”cabeçalho”>
-    <span class=”cabeçalho__menu-hamburguer”></span>
-    <img src=”img/Logo.svg” alt=”Logo da Alurabooks”>
-    </header>
-    </body>
